# argon2

./: .gitmodules  CMakeLists.txt  README.md  lib.ring  package.ring
.github/workflows/: freebsd_build.yml  macos_build.yml  main.yml  testCI.yml  ubuntu_build.yml  windows_build.yml
examples/: 01-argon2d_basic_example.ring  02-argon2d_openssl_salt_example.ring  03-argon2i_basic_example.ring  04-argon2i_openssl_salt_example.ring  05-argon2id_basic_example.ring  06-argon2id_openssl_salt_example.ring
lib/macos/amd64/: libring_argon2.dylib
lib/macos/arm64/: libring_argon2.dylib
src/: argon2.ring  argon2_test.ring  ring_argon2.c  ring_argon2.rh
src/utils/: color.ring  install.ring  uninstall.ring
